fix openapi schema syntax
